assets/css/local.css
:root {
    --background-color: rgb(34, 39, 46);
    --background-color-pale: rgb(44, 49, 56);
    --background-color-dark: rgb(24, 29, 36);
    --border-color: rgb(100,100,100);
    --border-radius: 5px;
    --font-color: rgb(220,220,220);
    --font-muted-color: rgb(175,175,175);
    --menu-background-color: rgb(110,110,110);
    --menu-background-hover-color: rgb(130,130,130);
    --link-color: inherit;
    --link-hover-color: rgb(255,255,255);
    --nav-border-color: rgb(75,75,75);
    --article-header-color: rgb(215,215,215);
    --category-background-color: rgb(44, 49, 56);
    --foot-text-color: rgb(175,175,175);
    --foot-text-color-muted: rgb(150,150,150);
}

html {
    font-size: 100%;
    box-sizing: border-box;
    line-height: 1.7;
    letter-spacing: 0.5px;
}
body {
    font-family: "Goudy Bookletter 1911", serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings:
        "wdth" 100;
    font-size: 1.2rem;
    color: var(--font-color);
    background-color: var(--background-color);
    max-width: 1024px;
    min-width: 350px;
    margin: 0 auto;
    padding: 0 1rem;
}

body > header {
    display: flex;
    justify-content: space-between;
    .site-title {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: left;
        figure {
            margin: 0 1rem 0 0;
        }
    }
    h1 {
        font-size: 1.3rem;
        padding: 0.25rem 0rem;
        margin: 0;
    }
    nav {
        display: flex;
        justify-content: left;
        align-items: center;
        a {
            padding: 0.25rem 0.5rem;
            margin: 0 0.15rem;
        }
    }
}
@media (max-width: 600px) {
    body > header {
        justify-content: center;
        flex-direction: column;
        .site-title {
            justify-content: center;
            margin-bottom: 1rem;
        }
        nav {
            justify-content: center;
        }
    }
}

body > header {
    padding: 2rem 0 2rem 0;
}
body > footer {
    width: 100vw;
    margin-top: 5rem;
    margin-left: calc(50% - 50vw);
    padding-block: 1rem;
    padding-inline: max(1rem, calc((100vw - 1024px) / 2 + 1rem));
    box-sizing: border-box;
    background-color: var(--background-color-dark);
    text-align: center;
    display: flex;
    justify-content: space-between;
    align-items:flex-start;
    vertical-align: top;
    flex-direction: column;
    gap: 1rem;
    color: var(--foot-text-color);

    h3 {
        font-size: 1rem;
    }
    a, p {
        font-size: 0.8rem;
        color: var(--foot-text-color-muted) !important;
    }

    .sections {
        display: flex;
        justify-content: space-between;
        align-items:flex-start;
        vertical-align: top;
        flex-direction: row;
    }
    .sections div {
        width: calc(25% - 1rem);
        padding: 1rem;
        display: flex;
        flex-direction: column;
        text-align: left;

        &:first-child {
            width: calc(50% - 1rem);
            margin-right: 3rem;
        }
    }

    .footer-heading {
        font-weight: 600;
    }
}

main header,
section header,
article header {
    margin-bottom: 2rem;
    text-align: center;
}
main {
    a {
        text-decoration: underline;
    }
}
article {
    margin-bottom: 3rem;
}
section {
    margin: 0;
    margin-bottom: 3rem;
}

h1 {
    font-size: 1.8rem;
}
h2 {
    font-size: 1.6rem;
}
h3 {
    font-size: 1.4rem;
}
h1, h2, h3, h4 {
    font-weight: 400;
    margin: 0;
    margin-bottom: 1rem;
    text-shadow: 0 0 5px rgba(0,0,0,1);
    a {
        text-decoration: none;
    }
}

p {
    margin: 0 0 1rem 0;
}

table {
    width: 100%;
    margin: 2rem 0;
    border-collapse: collapse;
    border: 1px solid var(--border-color);
    border-radius: var(--border-radius);
    overflow: hidden;
    background-color: rgba(255,255,255,0.02);
}
th,
td {
    padding: 0.65rem 0.9rem;
    vertical-align: top;
    border-bottom: 1px solid rgba(255,255,255,0.08);
}
th {
    text-align: left;
    color: var(--article-header-color);
    background-color: rgba(255,255,255,0.05);
}
tbody tr:nth-child(even) {
    background-color: rgba(255,255,255,0.03);
}
tbody tr:last-child td {
    border-bottom: 0;
}

a, a:visited {
    color: var(--link-color);
    transition: color 0.25s ease;
    text-decoration: none;
}
a:hover {
    color: var(--link-hover-color);
}

figure {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0;
    margin: 2rem 0;
    border-radius: var(--border-radius);
    overflow: hidden;
    border-width: 2px;
    border-style: solid;
    border-color: var(--border-color);
    box-shadow: 0 0 10px rgba(0,0,0,1);
}
figure.figure-round {
    border-radius: 50%;
}

hr {
    width: 100%;
    background: var(--background-color-pale);
    border: none;
    height: 1px;
}

.home {
    display: flex;
    align-items: center;
    flex-direction: row-reverse;
    justify-content: space-evenly;
    gap: 0 4rem;
    width: 100vw;
    margin-left: calc(50% - 50vw);
    padding-block: 1rem;
    padding-inline: max(1rem, calc((100vw - 1024px) / 2 + 1rem));
    box-sizing: border-box;
    background-color: var(--background-color-dark);

    figure {
        min-width: 250px;
        height: 250px;
        width: 250px;
    }
    div {
        text-align: left;
    }
}
@media screen and (max-width: 900px) {
    .home {
        flex-direction: column;
        justify-content: space-evenly;
        div {
            text-align: center;
        }
    }
}

.home-section {
    h2 {
        text-align: center;
    }
}

